--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   },
   "scripts": {
     "build": "node index.js",
+    "build_with_downloads": "node utils/custom/import_files.js && node utils/custom/import_layers_csv.js && node index.js",
     "batch_ipfs_metas_migration": "node utils/custom/batch_ipfs_metas_migration.js",
     "check_mints": "node utils/custom/check_mints.js",
     "check_mints_batch": "node utils/custom/check_mints_batch.js",
     "create_provenance": "node utils/art_engine/create_provenance.js",
     "create_wallet_edition_combo": "node utils/custom/create_wallet_edition_combo.js",
+    "export_layer_csv": "node utils/custom/export_layers_csv.js",
     "generate": "node index.js",
     "generate_metadata": "node utils/art_engine/generate_metadata.js",
+    "import_files": "node utils/custom/import_files.js",
+    "import_layers_csv": "node utils/custom/import_layers_csv.js",
     "mint_batch": "node utils/nftport/mint_batch.js",
     "mint_item": "node utils/nftport/mint_item.js",
     "mint_range": "node utils/nftport/mint_range.js",
@@ -39,8 +43,9 @@
     "update_json_to_generic_meta": "node utils/custom/update_json_to_generic_meta.js",
     "update_metadata_info": "node utils/custom/update_metadata_info.js",
     "update_nft_info": "node utils/custom/update_nft_info.js",
-    "uploadFiles": "node utils/nftport/uploadFiles.js",
+    "upload_collection": "node utils/custom/upload_collection.js",
     "uploadMetas": "node utils/nftport/uploadMetas.js",
+    "uploadFiles": "node utils/nftport/uploadFiles.js",
     "uploadMetas_directory": "node utils/nftport/uploadMetas_directory.js"
   },
   "author": "Rohan de Jongh (thepeanutgalleryandco)",
@@ -49,8 +54,12 @@
     "@chainsafe/dappeteer": "2.3.0",
     "async-sema": "^3.1.1",
     "canvas": "^2.9.0",
+    "dotenv": "^16.0.0",
     "form-data": "^4.0.0",
     "gif-encoder-2": "^1.0.5",
+    "google-drive-connect": "^1.1.2",
+    "google-spreadsheet": "^3.2.0",
+    "nft.storage": "^6.1.0",
     "node-fetch": "^2.6.7",
     "puppeteer": "^13.5.0",
     "sha1": "^1.1.1",
